# albert-api

./: .coveragerc  .env.example  .env.template  .env.test  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  Untitled.ipynb  alembic.ini  compose.dev-arm.yml  compose.dev.yml  compose.example.yml  compose.prod-arm.yml  compose.prod.yml  compose.yml  config.example.yml  config.template.yml  config.yml  generate_config.sh  pyproject.toml
app/: .coveragerc  Dockerfile  alembic.ini  factory.py  main.py  pyproject.toml
app/alembic/: env.py
app/alembic/versions/: 01e96ab516fe_create_usages_table.py  2025_03_11_1552-9a9c82ec2470_create_usages_table.py  2025_03_21_1133-7a3db3a5deaf_init_database.py  2025_03_24_1854-b3f4c124e595_init_database.py  2025_03_25_1325-815e59f8ee3a_init_database.py  2025_03_26_0900-74eb752267a1_init_database.py  2025_03_27_1553-d2c1ad6dc628_init_database.py  2025_03_29_1741-d53eb9614657_init_database.py  2025_03_30_1857-a31d3337c21e_add_auth.py  2025_04_02_1603-e78eaed1bcb2_add_auth.py  2025_04_04_1641-8c5ae2a3d4d0_remove_delete_cascade_usage_token_id.py  2025_04_15_1513-a4ac45e7c990_remove_unique_name_on_token_and_.py  2025_04_17_1201-896cbf4c2cbb_add_new_columns_to_usages_table.py  2025_05_12_1613-5553fa60acfa_remove_default_role_attribut.py  2025_05_23_1351-13ae3a13d5bc_add_cumulative_calls_column_to_usage_.py  2025_05_26_1847-42db359bfa8a_add_budget_colonne.py  2025_05_28_1415-926d8bed6b37_create_metrics_table.py  2025_05_28_1541-752279f74929_add_cost_and_budget_colonne.py  2025_06_16_1029-37d92be0a44c_add_environnement_impact_in_db.py  2025_06_23_2210-e4e25bada04e_add_tags_tables.py  2025_06_26_0950-8bad2de34fe2_add_tags_tables.py  2025_07_11_1151-564856827493_add_email_and_sub_fields_in_user_table.py  2025_07_16_2239-6a6e053368f8_db_schema_for_model_router_client_and_.py  2025_07_21_1404-7a0cb766ba1e_db_schema_for_model_router_client_and_.py  2025_07_22_1322-1b2ef1f8f147_db_schema_for_model_router_client_and_.py  2025_07_22_1539-479aeeae940b_db_schema_for_model_router_client_and_.py
app/clients/: __init__.py  _authenticationclient.py  _cacheclient.py  _clientsmanager.py  _internetclient.py  _modelclients.py  _searchclient.py
app/clients/database/: __init__.py  _elasticsearchclient.py  _qdrantclient.py  _redisdatabaseclient.py  _sqldatabaseclient.py
app/clients/internet/: __init__.py  _baseinternetclient.py  _braveinternetclient.py  _duckduckgointernetclient.py
app/clients/mcp/: __init__.py  (+3 more)
app/db/: models.py  session.py
app/endpoints/: __init__.py  accounts.py  agents.py  albert.py  audio.py  auth.py  chat.py  chunks.py  collections.py  completions.py  deepsearch.py  deepwebsearch.py  documents.py  embeddings.py  files.py  mcp.py  model_provision.py  models.py  models_providing.py  multiagents.py  oauth2.py  oauth2callback.py  ocr.py  parse.py  parser.py  proconnect.py  rerank.py  roles.py  search.py  standard.py  tools.py  usage.py  users.py
app/helpers/: __init__.py  _accesscontroller.py  _agentmanager.py  _agentsmanager.py  _authenticationclient.py  _authmanager.py  _authorization.py  _basemodelrouter.py  _clientsmanager.py  _contentsizelimitmiddleware.py  _deepsearch.py  _deepwebsearch.py  _documentmanager.py  _fileuploader.py  _gristkeymanager.py  _identityaccessmanager.py  _immediatemodelrouter.py  _internetclient.py  _internetexplorer.py  _internetmanager.py  _internetsearch.py  _languagemodelreranker.py  _limiter.py  _metricsmiddleware.py  _metricstracker.py  _modelclient.py  _modelclients.py  _modeldatabasemanager.py  _modelregistry.py  _modelrouter.py  _multiagentmanager.py  _multiagents.py  _parsermanager.py  _queuingmodelrouter.py  _ratelimit.py  _redischathistory.py  _rerankclients.py  _s3fileloader.py  _search.py  _searchmanager.py  (+14 more)
app/mcp/: dependencies.py  fixtures.py  llm_client.py  mcp_bridge_client.py  mcp_loop.py  mcp_tool.py  test_mcp.py
app/schemas/: __init__.py  accounts.py  agents.py  audio.py  auth.py  chat.py  chunks.py  collections.py  completions.py  config.py  data.py  deepsearch.py  documents.py  embeddings.py  files.py  login.py  mcp.py  model_provision.py  modelclientmetrics.py  models.py  models_providing.py  multiagents.py  ocr.py  params.py  parse.py  parser.py  rerank.py  roles.py  search.py  security.py  settings.py  strategymodelclient.py  tokens.py  tools.py  usage.py  users.py
app/sql/: models.py  session.py
app/tests/: _test_files.py  config.test.yml  conftest.py  test_audio.py  test_auth.py  test_chat.py  test_chunks.py  test_collections.py  test_db.py  test_documents.py  test_embeddings.py  test_files.py  test_mcp.py  test_models.py  test_multiagents.py  test_ocr.py  test_parsing.py  test_rerank.py  test_router.py  test_search.py  test_sql_models.py  test_tools.py  test_usage_decorator.py  test_usagesmiddleware.py  test_websearchmanager.py
app/tools/: __init__.py  _baserag.py  _fewshots.py  _multiagents.py  _sppfewshots.py  _usefiles.py
app/unit/: fixtures.py
app/usecase/: mcp_usecase.py
app/utils/: carbon.py  config.py  configuration.py  context.py  data.py  depends.py  exceptions.py  hooks_decorator.py  lifespan.py  logging.py  metrics_decorator.py  models-extra-info.toml  multiagents.py  rabbitmq.py  route.py  schemas.py  security.py  settings.py  usage_decorator.py  utils_eco.py  variables.py
ui/: Dockerfile  alembic.ini  app.py  chat.py  config.py  configuration.py  logging.py  main.py  pyproject.toml  requirements.txt  settings.py  style_ui.py  styles.md  utils.py  variables.py
ui/alembic/: env.py
ui/backend/: account.py  admin.py  chat.py  common.py  document_parsing.py  documents.py  login.py  settings.py  summarize.py
ui/frontend/: account.py  admin.py  chat.py  css.py  documents.py  header.py  proconnect.py  summarize.py  transcription.py  utils.py
ui/pages/: account.py  admin.py  chat.py  documents.py  files.py  summarize.py  summary.py  transcription.py
ui/sql/: models.py  session.py
ui/utils/: account.py  admin.py  chat.py  common.py  documents.py  summarize.py  variables.py
(+450 files in other folders)
