[project]
name = "albert-api"
version = "1.0.0"
description = "Albert API projects"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "openai==1.63.0",
    "requests==2.32.3",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1",
]

[project.optional-dependencies]
ui = [
    "streamlit==1.42.0",
    "streamlit-extras==0.5.0", 
]
app = [
    # authentication
    "alembic==1.14.1",
    "asyncpg==0.30.0",
    "bcrypt==4.3.0",
    "python-jose==3.4.0",
    "sqlalchemy[asyncio]==2.0.38",
    "sqlalchemy-utils==0.41.2",

    # files
    "elasticsearch==8.17.1",
    "langchain==0.2.15",
    "qdrant-client==1.10.1",
    "redis==5.2.1",
    "six==1.17.0",
    "pdfminer.six==20240706",
    "beautifulsoup4==4.13.3",

    # app
    "gunicorn==23.0.0",
    "fastapi==0.115.8",
    "prometheus-fastapi-instrumentator==7.0.2",
    "pyyaml==6.0.2",
    "uvicorn==0.34.0",
    "python-multipart==0.0.20",
]
dev = [
    "ruff==0.6.5",
    "pre-commit==4.1.0",
    "jupyter==1.1.1",
]
test = [
    "pytest==8.3.4",
    "pytest-snapshot==0.9.0",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 150

[tool.ruff.lint]
ignore = ["F403", "F841"] # import * and never used variables

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["config", "utils", "app"]
forced-separate = ["tests"]

[tool.ruff.lint.isort.sections]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
addopts = "--exitfirst --log-cli-level=INFO"
testpaths = ["app/tests"]
