[project]
name = "albert-api"
version = "1.0.0"
description = "Albert API."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "boto3==1.34.135",
    "botocore==1.34.135",
    "openai==1.35.7",
    "langchain==0.2.6",
    "langchain-community==0.2.9",
    "langchain-openai==0.1.11",
    "langchain-huggingface==0.0.3",
    "huggingface-hub==0.23.4",
    "qdrant-client==1.9.2",
    "redis==5.0.7",
    "uvicorn==0.30.1",
    "fastapi==0.111.0",
    "python-multipart==0.0.9",
    "docx==0.2.4",
    "pyyaml==6.0.1",
    "python-docx==1.1.2",
    "unstructured==0.14.9",
    "python-magic==0.4.27",
    "grist-api==0.1.0",
    "pdfminer.six==20240706",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 100
