[project]
name = "albert-ui"
version = "1.0.0"
description = "Streamlit UI for Albert API"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "openai==1.43.0",
    "requests==2.32.3",
    "streamlit_local_storage==0.0.23",
    "streamlit==1.38.0",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 150

[tool.ruff.isort]
force-sort-within-sections = true
known-first-party = ["Chat", "config", "utils", "pages", "Files"]
forced-separate = ["tests"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
